--- a/bigtable-hbase-1.x-parent/pom.xml
+++ b/bigtable-hbase-1.x-parent/pom.xml
@@ -36,7 +36,7 @@ limitations under the License.
     <module>bigtable-hbase-1.x-integration-tests</module>
     <module>bigtable-hbase-1.x-mapreduce</module>
     <module>bigtable-hbase-1.x-benchmarks</module>
-    <module>bigtable-hbase-tools</module>
+    <module>bigtable-hbase-1.x-tools</module>
   </modules>
 
   <build>
